footer texts overlappin on mobile fixed

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -686,7 +686,7 @@ body {
 
       @media screen and (max-width:768px) {
         max-width: 100%;
-        margin-bottom: -70px;
+        margin-bottom: -100px;
       }
 
       .textTitle {
@@ -721,12 +721,12 @@ body {
         }
 
         @media screen and (max-width:768px) {
-          font-size: 25px;
-          line-height: 30px;
+          font-size: 20px;
+          line-height: 20px;
         }
 
         @media screen and (max-width:500px) {
-          font-size: 19px;
+          font-size: 17px;
           line-height: 20px;
         }
       }
